Fix flickr images width on mobile. Also some python code formatting.

--- a/css/styles.css
+++ b/css/styles.css
@@ -68,7 +68,7 @@ main {
 	clear: both;
 	border: 2px solid darksalmon;
 	padding: 5px;
-	margin: 10px auto 60px;
+	margin: 10px auto 40px;
 }
 
 /* Navigation start */
@@ -275,4 +275,8 @@ nav ul li a {
 #flickrViewerPage div p {
    margin-top: 10px;
    margin-bottom: 5px;
+}
+
+#flickrViewerPage img {
+  max-width: 100%;
 }
